--- a/app/res/layout/activity_splash.xml
+++ b/app/res/layout/activity_splash.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@android:color/holo_blue_dark"
     android:orientation="vertical">
 
     <Button
@@ -19,6 +19,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/playButton"
         android:layout_centerInParent="true"
-        android:text="AI" />
+        android:text="Train model" />
 
 </RelativeLayout>
